# memcache-hs

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  TODO.md  default.nix  memcache.cabal  package.yaml  shell.nix  stack-lts-20.26.yaml  stack.yaml  weeder.toml
.github/workflows/: ci.yml
.stack-work/install/x86_64-osx/lts-5.2/7.10.3/flag-cache/: monad-control-1.0.0.5-4c39b4f0d8edb66df2d7af56aa6df366  mwc-random-0.13.3.2-07f822b3cfc24b23e29532f75b92ba70  resource-pool-0.2.3.2-34eb5dfe5018defcf8d60560e8500b94  transformers-base-0.4.4-19dc155e74aa624600f63b02f5f0b424  vector-algorithms-0.7.0.1-b3f7019f3fd7423fbd0b5c5ad245282e
.stack-work/install/x86_64-osx/lts-5.2/7.10.3/lib/x86_64-osx-ghc-7.10.3/memcache-0.1.0.0-3Z8qUpsEDiC53dYw3oq6HZ/: libHSmemcache-0.1.0.0-3Z8qUpsEDiC53dYw3oq6HZ-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.2/7.10.3/lib/x86_64-osx-ghc-7.10.3/memcache-0.1.0.0-3Z8qUpsEDiC53dYw3oq6HZ/Database/Memcache/: Client.dyn_hi  Cluster.dyn_hi  SASL.dyn_hi
.stack-work/install/x86_64-osx/lts-5.2/7.10.3/pkgdb/: memcache-0.1.0.0-2d5317abc4b26a56f4b330255e6163d1.conf  package.cache
Database/Memcache/: Client.hs  Cluster.hs  Connection.hs  ElastiCacheClient.hs  Errors.hs  LClient.hs  Protocol.hs  SASL.hs  Server.hs  Sid.hs  Socket.hs  Types.hs  Utils.hs  Wire.hs
Database/Memcache/Connection/: Internal.hs  Internal.lhs  Pool.hs  Pool.lhs
Database/Memcache/Posix/: LClient.hs
Database/Memcache/Server/: Internal.hs  Internal.lhs
Database/Memcache/Types/: Authentication.hs  ServerSpec.hs
Database/Memcache/Win32/: LClient.hs
bench/: Parser.hs
scraps/: LClient.hs
test/: Full.hs  MockServer.hs
test/Database/Memcache/: SidSpec.hs
tools/: Gets.hs  Loader.hs  OpGen.hs  Stats.hs
