name:           memcache
version:        0.1.0.0
homepage:       https://github.com/dterei/mc-hs
bug-reports:    https://github.com/dterei/mc-hs/issues
synopsis:       A memcached client library.
description:    
  A client library for a Memcache cluster. It is aimed at full binary
  protocol support, ease of use and speed.
license:        BSD3
license-file:   LICENSE
author:         David Terei <davidterei@gmail.com>
maintainer:     David Terei <davidterei@gmail.com>
copyright:      2012 David Terei.
category:       Database
build-type:     Simple
cabal-version:  >= 1.8
extra-source-files:
  README.md

library
  exposed-modules:
    Database.Memcache.Client
    Database.Memcache.LClient
    Database.Memcache.Protocol
    Database.Memcache.SASL
    Database.Memcache.Server
    Database.Memcache.Types
    Database.Memcache.Wire

  build-depends:
    base < 5,
    binary >= 0.6.2.0,
    bytestring >= 0.10.2.0,
    cereal > 0.3.5,
    lio >= 0.9,
    network >= 2.4

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

test-suite full
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Full.hs

  build-depends:
    base < 5,
    memcache

  ghc-options: -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

benchmark parser
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Parser.hs

  build-depends:
    base < 5,
    criterion > 0.6.0.0,
    memcache

  ghc-options: -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

source-repository head
  type:     git
  location: http://github.com/dterei/mc-hs

